--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -77,6 +77,7 @@
     border: 1px solid white
     border-radius: 50%
     z-index: 4
+    cursor: pointer
 
 .point2
     position: absolute
@@ -88,6 +89,7 @@
     border: 1px solid white
     border-radius: 50%
     z-index: 4
+    cursor: pointer
 
 .point3
     position: absolute
@@ -99,6 +101,7 @@
     border: 1px solid white
     border-radius: 50%
     z-index: 4
+    cursor: pointer
 
 .point4
     position: absolute
@@ -110,6 +113,7 @@
     border: 1px solid white
     border-radius: 50%
     z-index: 4
+    cursor: pointer
 
 .point5
     position: absolute
@@ -121,3 +125,4 @@
     border: 1px solid white
     border-radius: 50%
     z-index: 4
+    cursor: pointer
