--- a/sass/style.sass
+++ b/sass/style.sass
@@ -30,7 +30,8 @@
 @import "../app/TicTacToe/sass/TicTacToe"
 @import "../figma/SOS/sass/sectionOne"
 @import "../figma/SOS/sass/sectionTwo"
-@import "../figma/SOS/sass/sectionThree"
+/** @import "../figma/SOS/sass/sectionThree" **/
 @import "../figma/SOS/sass/sectionFour"
 @import "../figma/SOS/sass/sectionFive"
 @import "../figma/SOS/sass/sectionSix"
+@import "../figma/SOS/sass/sectionThreeExperimental"
