--- a/css/style.css
+++ b/css/style.css
@@ -2683,7 +2683,15 @@ html:hover .spider {
   outline: none;
 }
 
-.button-subscribe {
+.rights-text {
+  color: red;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  font-family: Open Sans;
+}
+
+.ButtonSubscribe {
   position: absolute;
   top: 511px;
   left: 1060px;
@@ -2691,24 +2699,22 @@ html:hover .spider {
   height: 60px;
   background: linear-gradient(#FFB548, #F3AF34);
   border-radius: 4px;
-  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
 }
-.button-subscribe:hover {
+.ButtonSubscribe:hover {
   background: linear-gradient(#fc9804, #d39013);
   border: 1.5px solid darkred;
 }
-.button-subscribe-text {
+.ButtonSubscribe button {
+  width: 250px;
+  height: 50px;
+  background: transparent;
+  border: none;
+  color: black;
   font-size: 16px;
+  cursor: pointer;
   font-weight: 700;
-  font-family: Open Sans;
-  text-align: center;
-}
-
-.rights-text {
-  color: red;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 19px;
   font-family: Open Sans;
 }
 
