--- a/css/style.css
+++ b/css/style.css
@@ -2683,14 +2683,6 @@ html:hover .spider {
   outline: none;
 }
 
-.rights-text {
-  color: red;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 19px;
-  font-family: Open Sans;
-}
-
 .ButtonSubscribe {
   position: absolute;
   top: 511px;
@@ -2716,6 +2708,49 @@ html:hover .spider {
   cursor: pointer;
   font-weight: 700;
   font-family: Open Sans;
+}
+
+.footer-up {
+  display: flex;
+  justify-content: space-between;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-under {
+  width: 1200px;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 15px;
+}
+.footer-under .under-menu {
+  display: flex;
+  justify-content: space-between;
+  width: 420px;
+}
+.footer-under .under-menu a {
+  color: white;
+  text-decoration: none;
+}
+
+.rights-text {
+  color: #747576;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  font-family: Open Sans;
+}
+
+.footer-wrapper {
+  position: absolute;
+  bottom: 5px;
+  width: 100%;
+}
+.footer-wrapper-inner {
+  display: block;
+  margin: 0 auto;
 }
 
 .SectionThree {
