--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -78,13 +78,6 @@
             &:focus
                 outline: none
 
-.rights-text
-    color: red
-    font-weight: 400
-    font-size: 14px
-    line-height: 19px
-    font-family: Open Sans
-
 .ButtonSubscribe
     position: absolute
     top: 511px
@@ -110,3 +103,42 @@
         cursor: pointer
         font-weight: 700
         font-family: Open Sans
+
+.footer-up
+    display: flex
+    justify-content: space-between
+    width: 1200px
+    margin: 0 auto
+
+.footer-under
+    width: 1200px
+    height: 100px
+    display: flex
+    justify-content: space-between
+    margin: 0 auto
+    padding: 15px
+
+    .under-menu
+        display: flex
+        justify-content: space-between
+        width: 420px
+
+        a
+            color: white
+            text-decoration: none
+
+.rights-text
+    color: #747576
+    font-weight: 400
+    font-size: 14px
+    line-height: 19px
+    font-family: Open Sans
+
+.footer-wrapper
+    position: absolute
+    bottom: 5px
+    width: 100%
+
+    &-inner
+        display: block
+        margin: 0 auto
