--- a/sass/GamesOne/GamesOne-Tabs.css
+++ b/sass/GamesOne/GamesOne-Tabs.css
@@ -1,12 +1,17 @@
-.tabs-content-inner {
+.tabs-inner {
   position: relative;
   overflow: hidden;
+  width: 1200px;
+  height: 360px;
 }
 
 .btn-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-bottom: 1px solid #ccc;
 }
+
 .btn-box button {
   background: transparent;
   border: none;
@@ -16,34 +21,52 @@
   margin-right: 50px;
   font-size: 20px;
   font-weight: bold;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
 }
+
 .btn-box button button:hover {
   color: #ff7846;
 }
 
 .tabs-content__right img {
   width: 350px;
+  margin-right: 20px;
+}
+
+tabs-content__right-calc img {
+  width: 350px;
+  margin-right: 50px;
 }
 
 .tabs-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: absolute;
-  transform: translateX(300%);
+  -webkit-transform: translateX(300%);
+          transform: translateX(300%);
+  -webkit-transition: 0.7s;
   transition: 0.7s;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   text-align: center;
   margin: 20px auto;
 }
+
 .tabs-content__left {
-  flex-basis: 60%;
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
 }
+
 .tabs-content__left p {
   padding: 10px 0;
   text-align: left;
 }
+
 .tabs-content__left a {
   width: 150px;
-  display: block;
   padding: 8px 5px;
   border-radius: 20px;
   text-decoration: none;
@@ -51,18 +74,68 @@
   color: red;
   text-align: center;
 }
+
 .tabs-content__right {
-  flex-basis: 50%;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
   text-align: left;
   padding: 24px;
 }
 
 #content1 {
-  transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
 }
 
 #btn1 {
   color: #ff7846;
 }
 
+.button-For-Like {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  -webkit-animation: pulse 1.2s ease infinite;
+          animation: pulse 1.2s ease infinite;
+  background: red;
+  color: darkblue;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.button-For-Like button {
+  background: transparent;
+  border: none;
+  color: white;
+  font-size: 48px;
+  cursor: pointer;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+}
 /*# sourceMappingURL=GamesOne-Tabs.css.map */
