--- a/sass/Global/footer/footer1.css
+++ b/sass/Global/footer/footer1.css
@@ -1,37 +1,63 @@
 .footer1 {
-  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.footer1-menu {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
+@media only screen and (max-width: 677px) {
+  .footer1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
-.footer1-menu li {
-  display: inline-block;
+.mushroom1 {
+  opacity: 0;
 }
 
-.footer1-menu ul li a {
-  text-decoration: none;
-  -webkit-box-direction: normal;
-  font-family: Graphik, Arial, sans-serif;
-  color: #3f5067;
-  box-sizing: border-box;
-  outline: none;
-  border-bottom: 1px solid #edecec;
-  font-size: 16px;
-  line-height: 24px;
-  padding: 17px 17px 17px;
+.footer1-img {
+  position: relative;
+  height: 115px;
+  width: 115px;
+  background-color: transparent;
 }
 
-.footer1-menu-img {
+@media only screen and (max-width: 677px) {
+  .footer1-img {
+    margin-top: 12px;
+  }
+}
+
+@media only screen and (max-width: 677px) {
+  .footer1-img:nth-child(2) {
+    display: none;
+  }
+}
+
+.footer1-img img {
+  position: absolute;
   width: 100%;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.mushroom1:hover {
+  opacity: 1;
+}
+
+.footer1-img img {
+  width: 80%;
   height: 100%;
 }
-
 /*# sourceMappingURL=footer1.css.map */
