--- a/sass/Global/footer/footer2-Andrusha-Editions.css
+++ b/sass/Global/footer/footer2-Andrusha-Editions.css
@@ -1,4 +1,8 @@
 .footer2-content-down-creature {
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
   margin-top: 20px;
   font-size: 24px;
   font-weight: 300;
@@ -6,16 +10,15 @@
   text-align: center;
 }
 
-.footer2-content-down-creature {
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  position: relative;
-  display: inline-block;
+@media only screen and (max-width: 677px) {
+  .footer2-content-down-creature {
+    display: none;
+  }
 }
 
 .footer2-content-down-creature:before,
 .footer2-content-down-creature:after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100px;
   height: 100px;
@@ -23,42 +26,62 @@
   top: -10px;
   left: 50%;
   z-index: 1;
+  -webkit-transition: all 1s ease 0s;
   transition: all 1s ease 0s;
   margin: 0px 0px 0px -40px;
 }
 
 .footer2-content-down-creature:before {
-  animation: rotate 17s infinite linear;
+  -webkit-animation: rotate 17s infinite linear;
+          animation: rotate 17s infinite linear;
 }
 
 .footer2-content-down-creature:after {
-  animation: rotate 10s infinite linear;
+  -webkit-animation: rotate 10s infinite linear;
+          animation: rotate 10s infinite linear;
 }
 
 .footer2-content-down-creature-text {
   position: relative;
   height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0 50px;
   border-radius: 50px;
   font-size: 24px;
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.3);
   letter-spacing: 10px;
+  -webkit-transition: all 1s ease 0s;
   transition: all 1s ease 0s;
   top: 0;
   overflow: hidden;
 }
 
+@media only screen and (max-width: 677px) {
+  .footer2-content-down-creature-text {
+    height: 30px;
+    padding: 0;
+    -webkit-transition: none;
+    transition: none;
+  }
+}
+
 .footer2-content-down-creature-text:before,
 .footer2-content-down-creature-text:after {
-  content: "";
+  content: '';
   position: absolute;
   width: 50%;
   height: 100%;
   background-color: #eee;
+  -webkit-transition: all 1s ease 0s;
   transition: all 1s ease 0s;
 }
 
@@ -85,8 +108,10 @@
 .footer2-content-down-creature-text {
   top: -10px;
   color: white;
+  -webkit-transition: all 2s ease 0s;
   transition: all 2s ease 0s;
-  box-shadow: 0 5px 0px 0 #0c5b52;
+  -webkit-box-shadow: 0 5px 0px 0 #0c5b52;
+          box-shadow: 0 5px 0px 0 #0c5b52;
 }
 
 .footer2-content-down-creature-text:before,
@@ -100,17 +125,31 @@
 
 .footer2-content-down-creature:active .footer2-content-down-creature-text {
   top: -7px;
+  -webkit-transition: all 2s ease 0s;
   transition: all 2s ease 0s;
-  box-shadow: 0 5px 0px 0 #0c5b52;
+  -webkit-box-shadow: 0 5px 0px 0 #0c5b52;
+          box-shadow: 0 5px 0px 0 #0c5b52;
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  0% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
 @keyframes rotate {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   0% {
-    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
-
 /*# sourceMappingURL=footer2-Andrusha-Editions.css.map */
