--- a/sass/Global/footer/footer2-logo.css
+++ b/sass/Global/footer/footer2-logo.css
@@ -1,14 +1,47 @@
+.footer2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media only screen and (max-width: 677px) {
+  .footer2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
 .footer2-logo {
-  margin: 0;
+  width: 300px;
+  height: 110px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.footer-logo-img {
-  margin-top: 65px;
-  width: 150px;
+.footer-logo-prototip img {
+  margin-top: 20px;
+  margin-left: 20px;
+  width: 200px;
   height: 50px;
+  border-radius: 14px;
 }
 
-.footer-logo-text {
+.footer2-logo-text {
   text-align: center;
   font-size: 12px;
   font-weight: 300;
@@ -16,4 +49,22 @@
   color: darkred;
 }
 
+.footer2-content {
+  width: 800px;
+}
+
+@media only screen and (max-width: 677px) {
+  .footer2-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 /*# sourceMappingURL=footer2-logo.css.map */
