--- a/sass/article/PackOfMoney.css
+++ b/sass/article/PackOfMoney.css
@@ -2,10 +2,16 @@
   margin: 0 auto;
   padding-left: 400px;
   width: 100%;
-  height: 100vh;
+  height: 60vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .Article__PackOfMoney {
@@ -14,57 +20,68 @@
   height: 1334px;
   margin-top: 150px;
   background-color: transparent;
-  transform: scale(0.5) rotate(-30deg) skew(25deg);
+  -webkit-transform: scale(0.5) rotate(-30deg) skew(25deg);
+          transform: scale(0.5) rotate(-30deg) skew(25deg);
 }
+
 .Article__PackOfMoney img {
   position: absolute;
   width: 100%;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
 .Article__PackOfMoney:hover img:nth-child(9) {
-  transform: translate(55px, -55px);
+  -webkit-transform: translate(55px, -55px);
+          transform: translate(55px, -55px);
   opacity: 1;
 }
 
 .Article__PackOfMoney:hover img:nth-child(8) {
-  transform: translate(50px, -50px);
+  -webkit-transform: translate(50px, -50px);
+          transform: translate(50px, -50px);
   opacity: 0.9;
 }
 
 .Article__PackOfMoney:hover img:nth-child(7) {
-  transform: translate(45px, -45px);
+  -webkit-transform: translate(45px, -45px);
+          transform: translate(45px, -45px);
   opacity: 0.8;
 }
 
 .Article__PackOfMoney:hover img:nth-child(6) {
-  transform: translate(40px, -40px);
+  -webkit-transform: translate(40px, -40px);
+          transform: translate(40px, -40px);
   opacity: 0.7;
 }
 
 .Article__PackOfMoney:hover img:nth-child(5) {
-  transform: translate(35px, -35px);
+  -webkit-transform: translate(35px, -35px);
+          transform: translate(35px, -35px);
   opacity: 0.6;
 }
 
 .Article__PackOfMoney:hover img:nth-child(4) {
-  transform: translate(30px, -30px);
+  -webkit-transform: translate(30px, -30px);
+          transform: translate(30px, -30px);
   opacity: 0.5;
 }
 
 .Article__PackOfMoney:hover img:nth-child(3) {
-  transform: translate(25px, -25px);
+  -webkit-transform: translate(25px, -25px);
+          transform: translate(25px, -25px);
   opacity: 0.4;
 }
 
 .Article__PackOfMoney:hover img:nth-child(2) {
-  transform: translate(15px, -15px);
+  -webkit-transform: translate(15px, -15px);
+          transform: translate(15px, -15px);
   opacity: 0.3;
 }
 
 .Article__PackOfMoney:hover img:nth-child(1) {
-  transform: translate(10px, -10px);
+  -webkit-transform: translate(10px, -10px);
+          transform: translate(10px, -10px);
   opacity: 0.2;
 }
-
 /*# sourceMappingURL=PackOfMoney.css.map */
