--- a/figma/SOS/sass/sectionSix.sass
+++ b/figma/SOS/sass/sectionSix.sass
@@ -41,8 +41,11 @@
 
 .s6img-main
     position: absolute
-    top: 50px
+    top: 20px
     left: 160px
+    img
+        width: 360px
+        height: 600px
 
 .email
     position: absolute
@@ -107,11 +110,28 @@
 .footer-up
     display: flex
     justify-content: space-between
-    width: 1200px
+    width: 1300px
     margin: 0 auto
+    padding-bottom: 30px
+
+    &-img
+        img
+            width: 180px
+            height: 90px
+            padding-right: 90px
+
+    .footer-up-imgs
+        i
+            color: white
+            font-size: 24px
+            padding: 30px
+            transition: 0.5s
+
+            &:hover
+                color: red
 
 .footer-under
-    width: 1200px
+    width: 1300px
     height: 100px
     display: flex
     justify-content: space-between
@@ -121,11 +141,17 @@
     .under-menu
         display: flex
         justify-content: space-between
-        width: 420px
+        width: 450px
 
         a
             color: white
             text-decoration: none
+            transition: 0.5s
+            text-transform: uppercase
+            font-weight: 700
+
+            &:hover
+                color: red
 
 .rights-text
     color: #747576
@@ -142,3 +168,29 @@
     &-inner
         display: block
         margin: 0 auto
+
+.footer-menu
+    display: flex
+    justify-content: space-between
+    width: 600px
+    margin-top: 33px
+    a
+        color: white
+        text-decoration: none
+        text-transform: uppercase
+        margin: 0 auto
+        transition: 0.5s
+        font-weight: 700
+
+        &:hover
+            color: red
+
+.footer-line-long
+    border-top: 3px solid rgba(151, 151, 151, 0.2)
+    width: 1300px
+    margin: 0 auto
+
+.footer-line-short
+    margin-top: 1.5px
+    height: 20px
+    border-left: 1px solid white
