--- a/figma/SOS/sass/sectionFive.sass
+++ b/figma/SOS/sass/sectionFive.sass
@@ -134,7 +134,7 @@
         margin-top: 151px
         color: #5d5d5e
 
-.fa-twitter::before
+.reviewsSOS .fa-twitter::before
     font-size: 17px
     color: #5d5d5e
     transition: 0.5s
