--- a/sass/style.sass
+++ b/sass/style.sass
@@ -35,3 +35,4 @@
 @import "../figma/SOS/sass/sectionFive"
 @import "../figma/SOS/sass/sectionSix"
 @import "../figma/SOS/sass/sectionThreeExperimental"
+@import "../figma/ZEN/sass/header"
