--- a/sass/style.sass
+++ b/sass/style.sass
@@ -36,3 +36,6 @@
 @import "../figma/SOS/sass/sectionSix"
 @import "../figma/SOS/sass/sectionThreeExperimental"
 @import "../figma/ZEN/sass/header"
+@import "../figma/ZEN/sass/ZenGlobal"
+@import "../figma/ZEN/sass/section1"
+@import "../figma/ZEN/sass/section2"
