--- a/css/style.css
+++ b/css/style.css
@@ -2915,4 +2915,155 @@ html:hover .spider {
   display: none;
 }
 
+.headerZEN {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
+}
+.headerZEN-LEFT {
+  display: flex;
+  justify-content: space-between;
+  width: 340px;
+}
+.headerZEN-LEFT-img {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 140px;
+  height: 40px;
+}
+.headerZEN-LEFT-img-Fill img {
+  width: 40px;
+  height: 40px;
+}
+.headerZEN-LEFT-img-mastercard img {
+  width: 70px;
+  height: 40px;
+}
+.headerZEN-LEFT-link {
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  height: 40px;
+  align-items: center;
+}
+.headerZEN-LEFT-link a {
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  color: #222222;
+}
+.headerZEN-RIGHT {
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+}
+.headerZEN-RIGHT-link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  width: 210px;
+}
+.headerZEN-RIGHT-link a {
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  color: #222;
+}
+.headerZEN-RIGHT-button {
+  width: 135px;
+  height: 48px;
+  border: 1px solid #222;
+  border-radius: 24px;
+  cursor: pointer;
+}
+.headerZEN-RIGHT-button-text {
+  text-align: center;
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 18px;
+  color: #222;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+.containerZEN {
+  width: 1300px;
+  margin: 0 auto;
+}
+
+.sectionZEN1 {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.sectionZEN1-left {
+  display: block;
+}
+.sectionZEN1-left-textUp {
+  margin-top: 204px;
+  color: black;
+  font-weight: 400;
+  font-size: 16px;
+}
+.sectionZEN1-left-h1 {
+  margin-top: 23px;
+  color: #222;
+  font-weight: 400;
+  font-size: 42px;
+  width: 370px;
+}
+.sectionZEN1-left-h1-2 {
+  margin-top: 20px;
+}
+.sectionZEN1-left-textUnder {
+  margin-top: 23px;
+  font-weight: 400;
+  font-size: 18px;
+  color: #222;
+  width: 400px;
+  height: 52px;
+}
+.sectionZEN1-left-buttonApps {
+  margin-top: 15px;
+}
+.sectionZEN1-left-buttonApps-AppStore img {
+  width: 167px;
+  height: 48px;
+}
+.sectionZEN1-left-buttonApps-GooglePlay img {
+  width: 167px;
+  height: 57px;
+}
+
+.sectionZEN1-right {
+  margin-top: 300px;
+  margin-right: 150px;
+}
+.sectionZEN1-right-h1 {
+  color: #222;
+  font-weight: 400;
+  font-size: 36px;
+  width: 370px;
+}
+.sectionZEN1-right-text {
+  margin-top: 22px;
+  color: #222;
+  font-weight: 400;
+  font-size: 18px;
+  width: 440px;
+}
+.sectionZEN1-right-text-2 {
+  margin-top: 12px;
+}
+
 /*# sourceMappingURL=style.css.map */
