--- a/sass/style.sass
+++ b/sass/style.sass
@@ -39,3 +39,5 @@
 @import "../figma/ZEN/sass/ZenGlobal"
 @import "../figma/ZEN/sass/section1"
 @import "../figma/ZEN/sass/section2"
+@import "../figma/ZEN/sass/section3"
+@import "../figma/ZEN/sass/sectionZEN-Cashbask"
