--- a/sass/style.sass
+++ b/sass/style.sass
@@ -41,3 +41,4 @@
 @import "../figma/ZEN/sass/section2"
 @import "../figma/ZEN/sass/section3"
 @import "../figma/ZEN/sass/sectionZEN-Cashbask"
+@import "../figma/ZEN/sass/company"
