--- a/figma/SOS/sass/sectionTwo.sass
+++ b/figma/SOS/sass/sectionTwo.sass
@@ -46,6 +46,8 @@
     top: 190px
     left: 770px
     z-index: 3
+    cursor: pointer
+
     img
         width: 490px
         height: 600px
@@ -55,6 +57,7 @@
     top: 210px
     left: 880px
     z-index: 2
+    cursor: pointer
     img
         width: 450px
         height: 550px
@@ -63,9 +66,16 @@
     position: absolute
     top: 230px
     left: 1000px
+    cursor: pointer
     img
         width: 400px
         height: 500px
+
+.switch-img
+    position: absolute
+    top: 470px
+    right: 130px
+    cursor: pointer
 
 .point1
     position: absolute
