--- a/figma/ZEN/sass/header.sass
+++ b/figma/ZEN/sass/header.sass
@@ -62,6 +62,11 @@
             border: 1px solid #222
             border-radius: 24px
             cursor: pointer
+            transition: 0.5s
+
+            &:hover
+                border: 1px solid red
+                background: rgba(255, 0, 0, 0.2)
 
             &-text
                 text-align: center
