--- a/figma/ZEN/sass/sectionZEN-Cashbask.sass
+++ b/figma/ZEN/sass/sectionZEN-Cashbask.sass
@@ -23,6 +23,12 @@
         border: 1px solid black
         border-radius: 24px
         margin: 0 auto
+        cursor: pointer
+        transition: 0.5s
+
+        &:hover
+            border: 1px solid red
+            background: rgba(255, 0, 0, 0.2)
 
         &-text
             text-align: center
