--- a/css/style.css
+++ b/css/style.css
@@ -2052,6 +2052,7 @@ html:hover .spider {
   width: 40px;
   height: 30px;
   cursor: pointer;
+  transition: 0.5s;
 }
 .header-inner .buttons .language:hover {
   color: red;
@@ -2059,6 +2060,26 @@ html:hover .spider {
 .header-inner .buttons .language-arrow {
   margin-left: 5px;
   margin-right: 5px;
+}
+.header-inner .buttons .language-menu {
+  position: absolute;
+  top: 50px;
+  width: 60px;
+  height: 80px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+.header-inner .buttons .language-menu li {
+  color: white;
+  margin-left: 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.header-inner .buttons .language-menu li:hover {
+  color: red;
 }
 .header-inner .buttons .separator {
   position: absolute;
