--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -66,6 +66,7 @@
             width: 40px
             height: 30px
             cursor: pointer
+            transition: 0.5s
 
             &:hover
                 color: red
@@ -73,6 +74,26 @@
             &-arrow
                 margin-left: 5px
                 margin-right: 5px
+
+        .language-menu
+            position: absolute
+            top: 50px
+            width: 60px
+            height: 80px
+            background-color: rgba(0, 0, 0, 0.5)
+            border-radius: 5px
+
+            li
+                color: white
+                margin-left: 10px
+                text-transform: uppercase
+                font-size: 12px
+                font-weight: 700
+                transition: 0.5s
+                cursor: pointer
+
+                &:hover
+                    color: red
 
         .separator
             position: absolute
