--- a/figma/ZEN/sass/section1.sass
+++ b/figma/ZEN/sass/section1.sass
@@ -34,11 +34,13 @@
             margin-top: 15px
 
             &-AppStore
-                img
-                    width: 167px
-                    height: 48px
+                a
+                    img
+                        width: 167px
+                        height: 48px
 
             &-GooglePlay
-                img
-                    width: 167px
-                    height: 57px
+                a
+                    img
+                        width: 167px
+                        height: 48px
