--- a/figma/ZEN/sass/section3.sass
+++ b/figma/ZEN/sass/section3.sass
@@ -1,10 +1,12 @@
 .sectionZEN3
-    margin-top: 15px
+    margin-top: 65px
     display: flex
     justify-content: space-between
 
     &-left
         color: #222
+        display: block
+        margin-top: 240px
 
         &-h1
             font-weight: 400
