--- a/figma/ZEN/sass/sectionZEN-Cashbask.sass
+++ b/figma/ZEN/sass/sectionZEN-Cashbask.sass
@@ -31,8 +31,11 @@
             background: rgba(255, 0, 0, 0.2)
 
         &-text
-            text-align: center
-            margin-top: 11px
-            color: #222
-            font-size: 18px
-            font-weight: 400
+            a
+                text-align: center
+                margin-top: 11px
+                color: #222
+                font-size: 18px
+                font-weight: 400
+                margin-left: 34px
+                text-decoration: none
