--- a/figma/ZEN/sass/header.sass
+++ b/figma/ZEN/sass/header.sass
@@ -37,6 +37,10 @@
                 font-weight: 400
                 text-decoration: none
                 color: #222222
+                transition: 0.5s
+
+                &:hover
+                    color: #ff6781
 
     &-RIGHT
         display: flex
@@ -55,6 +59,10 @@
                 font-weight: 400
                 text-decoration: none
                 color: #222
+                transition: 0.5s
+
+                &:hover
+                    color: #ff6781
 
         &-button
             width: 135px
