--- a/css/style.css
+++ b/css/style.css
@@ -3062,7 +3062,7 @@ html {
 }
 
 .containerZEN {
-  width: 1300px;
+  width: 85%;
   margin: 0 auto;
 }
 
@@ -3207,23 +3207,23 @@ html {
   text-decoration: none;
 }
 
-.company1 {
+.company {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.company .company-all {
   display: flex;
-  width: 1000px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.company1-png {
-  margin: 50px;
-}
-
-.company2 {
+.company .company-all .company-png {
+  margin-top: 20px;
+  width: 300px;
+  height: 100px;
   display: flex;
-  width: 1000px;
-}
-.company2-png img {
-  border: 2px solid red;
-  margin: 50px;
-  width: 200px;
-  height: 80px;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
