--- a/figma/ZEN/sass/company.sass
+++ b/figma/ZEN/sass/company.sass
@@ -1,17 +1,17 @@
-.company1
-    display: flex
-    width: 1000px
+.company
+    width: 100%
+    height: 100%
+    display: block
 
-    &-png
-        margin: 50px
+    .company-all
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-between
 
-.company2
-    display: flex
-    width: 1000px
-
-    &-png
-        img
-            border: 2px solid red
-            margin: 50px
-            width: 200px
-            height: 80px
+        .company-png
+            margin-top: 20px
+            width: 300px
+            height: 100px
+            display: flex
+            justify-content: center
+            align-items: center
