--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -8,3 +8,21 @@ html
 .containerZEN
     width: 85%
     margin: 0 auto
+
+.section-common
+    margin-top: 15px
+    display: flex
+    justify-content: space-between
+
+    &-text
+        color: #222
+
+        &-h1
+            font-weight: 400
+            font-size: 36px
+
+        &-text
+            padding: 22px 0
+            width: 470px
+            font-weight: 400
+            font-size: 18px
