--- a/sass/style.sass
+++ b/sass/style.sass
@@ -42,3 +42,4 @@
 @import "../figma/ZEN/sass/section3"
 @import "../figma/ZEN/sass/sectionZEN-Cashbask"
 @import "../figma/ZEN/sass/company"
+@import "../figma/ZEN/sass/section4"
