--- a/figma/ZEN/sass/header.sass
+++ b/figma/ZEN/sass/header.sass
@@ -1,11 +1,13 @@
 .headerZEN
     display: flex
     justify-content: space-between
+    flex-wrap: wrap
     padding-top: 25px
 
     &-LEFT
         display: flex
         justify-content: space-between
+        flex-wrap: wrap
         width: 340px
 
         &-img
