--- a/figma/ZEN/sass/ZenGlobal.sass
+++ b/figma/ZEN/sass/ZenGlobal.sass
@@ -9,7 +9,7 @@ html
     width: 85%
     margin: 0 auto
 
-.section-common
+.sectionZEN-common
     margin-top: 15px
     display: flex
     justify-content: space-between
@@ -20,9 +20,32 @@ html
         &-h1
             font-weight: 400
             font-size: 36px
+            line-height: 34px
 
         &-text
             padding: 22px 0
             width: 470px
             font-weight: 400
             font-size: 18px
+
+.sectionZEN-img
+    img
+        height: 100%
+        width: 100%
+
+@media ( max-width: 1050px)
+    .containerZEN
+        width: 100%
+        height: 100%
+
+    .sectionZEN-img
+        position: absolute
+        img
+            max-height: 100%
+            max-weight: 100%
+
+    .sectionZEN-common-text
+        margin: 0 auto
+        z-index: 2
+        margin-left: 0
+        padding-left: 0
