--- a/figma/ZEN/sass/company.sass
+++ b/figma/ZEN/sass/company.sass
@@ -15,3 +15,7 @@
             display: flex
             justify-content: center
             align-items: center
+
+@media ( max-width: 1050px )
+    .company-all
+        justify-content: center !important
