--- a/figma/ZEN/sass/section2.sass
+++ b/figma/ZEN/sass/section2.sass
@@ -1,4 +1,4 @@
-.sectionZEN2-right
+.sectionZEN11-common-text
     margin-top: 300px
     margin-right: 150px
     &-h1
@@ -6,6 +6,7 @@
         font-weight: 400
         font-size: 36px
         width: 370px
+        line-height: 34px
 
     &-text
         margin-top: 22px
@@ -15,3 +16,18 @@
         width: 440px
         &-2
             margin-top: 12px
+
+@media ( max-width: 1050px )
+    .sectionZEN-common-text
+        display: flex
+        flex-direction: column
+        justify-content: center
+
+        &-h1
+            margin-top: 5%
+            text-align: center
+            width: 100%
+            line-height: 34px
+
+        &-text
+            text-align: center
