--- a/figma/ZEN/sass/section4.sass
+++ b/figma/ZEN/sass/section4.sass
@@ -1,6 +1,18 @@
-.section-text-button
+.sectionZEN-text-button
     display: flex
     width: 200px
     height: 100%
     justify-content: space-between
     flex-wrap: wrap
+
+    .ApplePay
+        border-radius: 0
+    img
+        border-radius: 0
+
+@media ( max-width: 1050px )
+    .sectionZEN-text-button
+        margin: 0 auto
+        display: flex
+            /** flex-direction: column **/
+        justify-content: space-around
