--- a/figma/ZEN/sass/sectionZEN-Cashbask.sass
+++ b/figma/ZEN/sass/sectionZEN-Cashbask.sass
@@ -39,3 +39,10 @@
                 font-weight: 400
                 margin-left: 34px
                 text-decoration: none
+
+@media ( max-width: 1050px )
+    .sectionZEN-Cashbask
+
+        &-text
+            width: 100%
+            padding-bottom: 20px
