--- a/sass/style.sass
+++ b/sass/style.sass
@@ -43,3 +43,4 @@
 @import "../figma/ZEN/sass/company"
 @import "../figma/ZEN/sass/section4"
 @import "../figma/ZEN/sass/section8"
+@import "../figma/ZEN/sass/footer"
